# ai-dl

./: .dockerignore  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: deploy-pages.yml
docker/: Dockerfile.debian
electron/: main.cjs  preload.cjs
n_resources/zg/: 智能感知知识点分类.md
resources/question-bank/: manifest.json  questions.json
resources/question-bank/ai/: questions.json
scripts/: build-debian-docker.sh  build-windows-nsis.sh  clean-android-question-bank-assets.mjs  collect-release.mjs  compare-question-bank.mjs  fix-macos-dmgs.mjs  generate-china-modern-history-question-bank.mjs  generate-ds-question-bank.mjs  generate-ds1-question-bank.mjs  generate-icons.mjs  import-question-bank.mjs  smoke-desktop.mjs  smoke-web.mjs  verify-exam-timer.mjs
scripts/data/: ds-extra-foundation-questions.mjs  ds-homework7-questions.mjs  ds-image-examples.json  ds-md-exam-questions.mjs
shigang/: 中国近代史试题库(1).doc  近代史题库单选总结(1).docx
src/: App.vue  env.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: StatCard.vue
src/composables/: useExamStore.ts
src/services/: compiler.ts  exam.ts  examTimer.ts  externalLink.ts  questionBankUpdate.ts  questionBankVersion.ts  storage.ts  subjects.ts  update.ts
src/views/: DashboardView.vue  ExamView.vue  HistoryView.vue  PracticePickerView.vue  ResultView.vue  WrongBookView.vue
(+5 files in other folders)
