[package]
name = "ai-question-exam"
version = "0.1.3"
description = "人工智能导论题库桌面练习与考试应用"
authors = ["AI dl"]
edition = "2021"

[lib]
name = "ai_question_exam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-question-exam"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
