[package]
name = "muz-choice-blank-bank"
version = "0.1.4"
description = "muz-选填题库桌面练习与考试应用"
authors = ["AI dl"]
edition = "2021"

[lib]
name = "ai_question_exam_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "muz-choice-blank-bank"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
